--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "DefaultPreferencesPlugin",
   "version": "1.0.0",
-  "description": "",
+  "description": "Shows active Web/Site/Default Preferences in Q.Wiki",
   "main": "pub/System/DefaultPreferencesPlugin/defaultPreferencesPlugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,41 +14,34 @@
     "url": "git@git.modac.lan:q-wiki/DefaultPreferencesPlugin"
   },
   "author": "Modell Aachen GmbH",
-  "license": {
-    "type": "GPL-3.0",
-    "url": "http://www.gnu.org/licenses/gpl-3.0-standalone.html"
-  },
+  "license": "GPL-3.0",
   "dependencies": {
     "babel-core": "^6.3.17",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.0",
     "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.13.0",
-    "babel-runtime": "^5.8.34",
+    "babel-runtime": "^6.23.0",
     "clipboard": "^1.6.0",
-    "css-loader": "^0.23.0",
+    "css-loader": "^0.27.3",
     "eslint": "^3.8.1",
     "eslint-loader": "^1.6.0",
-    "eslint-plugin-html": "^1.7.0",
-    "file-loader": "^0.9.0",
-    "jquery": "^3.1.1",
+    "eslint-plugin-html": "^2.0.1",
+    "file-loader": "^0.10.1",
     "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "lodash": "^4.17.4",
-    "node-sass": "^3.13.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.14.1",
     "url-loader": "^0.5.7",
     "vue": "^2.0.0",
-    "vue-hot-reload-api": "^1.2.0",
+    "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.0.0",
-    "vue-loader": "^7.2.0",
-    "vue-style-loader": "^1.0.0",
+    "vue-loader": "^11.1.4",
+    "vue-style-loader": "^2.0.4",
     "vue-template-compiler": "^2.1.8",
-    "webpack": "^1.12.9",
-    "webpack-merge": "^0.17.0"
+    "webpack": "^2.2.1",
+    "webpack-merge": "^4.1.0"
   }
 }
