id:8033 Fix and update default preferences to newes VueJS version.

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,9 @@
         "commonjs": true,
         "es6": true
     },
+    globals: {
+        "Vue": false
+    },
     rules: {
         "linebreak-style": ["error", "unix"],
         "no-console": ["warn", {allow: ["warn", "error"]}],
