--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.13.0",
     "babel-runtime": "^6.23.0",
-    "clipboard": "^1.6.0",
     "css-loader": "^0.27.3",
     "eslint": "^3.8.1",
     "eslint-loader": "^1.6.0",
@@ -36,6 +35,7 @@
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.7",
     "vue": "^2.0.0",
+    "vue-clipboard2": "^0.2.1",
     "vue-hot-reload-api": "^2.0.11",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^11.1.4",
