--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "DefaultPreferencesPlugin",
+  "name": "defaultpreferencesplugin",
   "version": "1.0.0",
   "description": "Shows active Web/Site/Default Preferences in Q.Wiki",
   "main": "pub/System/DefaultPreferencesPlugin/defaultPreferencesPlugin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -d --watch --config development.webpack.config.js --progress",
-    "build-production": "NODE_ENV=production webpack -p --config production.webpack.config.js",
-    "postinstall": "NODE_ENV=production webpack -p --config production.webpack.config.js"
+    "build": "vue-cli-service build --no-clean",
+    "postinstall": "yarn build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint dev"
   },
   "repository": {
     "type": "git",
@@ -16,31 +16,22 @@
   "author": "Modell Aachen GmbH",
   "license": "GPL-3.0",
   "dependencies": {
-    "babel-core": "^6.3.17",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-runtime": "^6.23.0",
-    "css-loader": "^0.27.3",
-    "eslint": "^3.8.1",
-    "eslint-loader": "^1.6.0",
-    "eslint-plugin-html": "^2.0.1",
-    "file-loader": "^0.10.1",
-    "json-loader": "^0.5.4",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
     "lodash": "^4.17.4",
-    "node-sass": "^4.5.0",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.14.1",
-    "url-loader": "^0.5.7",
-    "vue": "^2.0.0",
-    "vue-hot-reload-api": "^2.0.11",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.4",
-    "vue-template-compiler": "^2.1.8",
-    "webpack": "^2.2.1",
-    "webpack-merge": "^4.1.0"
+    "node-sass": "^4.5.1",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-eslint": "^3.7.0",
+    "@vue/cli-plugin-unit-jest": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-jest": "^24.8.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "eslint-plugin-vue": "^5.2.2",
+    "sass-loader": "^7.1.0"
   }
 }
