--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shows active Web/Site/Default Preferences in Q.Wiki",
   "main": "pub/System/DefaultPreferencesPlugin/defaultPreferencesPlugin.js",
   "scripts": {
-    "build": "vue-cli-service build --no-clean",
+    "build": "vue-cli-service build",
     "postinstall": "yarn build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint dev"
@@ -24,14 +24,20 @@
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
+    "@modac/eslint-config": "^0.1.2",
+    "@modac/jest-config": "^0.1.0",
+    "@modac/tsconfig": "^0.1.0",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-plugin-unit-jest": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "babel-jest": "^24.8.0",
     "compression-webpack-plugin": "^2.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5"
   }
 }
